tests/paczka1/fuzzy1/40575353.err
Error in line 5: A612 A612 74,2
Error in line 13: H6gOun1PKPn A948 71,1
Error in line 19: H6gOun1PKPn A612 7,9
Error in line 24: oqoy6Z S786 13,1
Error in line 25: oqoy6Z A948 32,1
Error in line 34: qH4 A222 84,3
Error in line 37: rFBa3fqb A222 24,7
